--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="btn_3">Категории</string>
     <string name="btn_4">Продолжить просмотр</string>
     <string name="btn_5">Настройки</string>
+    <string name="menu_settings_title">settings</string>
 </resources>
