--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="continue_watching">Продолжить просмотр</string>
     <string name="settings">Настройки</string>
     <string name="menu_settings_title">settings</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_reference">Изображения с сайта https://www.imdb.com/</string>
 </resources>
